# thaler-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  thaler-ai_0.4.1_amd64.deb
.github/workflows/: build.yml
docs/: ANALIZA-KWOTY-XLSX.md  PLAN.md  PRD.md  PROMPT-PROPOSAL.md  TECH.md
docs/analysis/: ANALIZA-KWOTY-XLSX.md  PROMPT-PROPOSAL.md
pics/: thaler-ico.png:Zone.Identifier
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs
src-tauri/assets/: thaler-ai.desktop
src-tauri/assets/scripts/: prerm
src-tauri/src/: anonymizer.rs  main.rs
src-tauri/wix/: License.rtf  main.wxs
