[package]
name = "thaler-ai"
version = "0.4.1"
description = "Document anonymization with local LLM"
authors = ["Jerzy Maczewski"]
license = "MIT"
edition = "2021"

[[bin]]
name = "thaler-ai"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
calamine = "0.26"
zip = "2"
quick-xml = "0.37"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
aho-corasick = "1"
open = "5"
bytes = "1"

[build-dependencies]
winres = "0.1"

[package.metadata.deb]
revision = ""
maintainer = "Jerzy Maczewski"
section = "utils"
priority = "optional"
depends = "libc6"
extended-description = "Detects sensitive entities and replaces them with deterministic tokens.\nAll processing is local — data never leaves the machine."
maintainer-scripts = "assets/scripts/"
assets = [
    ["target/release/thaler-ai", "usr/bin/", "755"],
    ["assets/thaler-ai.desktop", "usr/share/applications/", "644"],
    ["icons/128x128.png", "usr/share/pixmaps/thaler-ai.png", "644"],
    ["icons/128x128.png", "usr/share/icons/hicolor/128x128/apps/thaler-ai.png", "644"],
    ["icons/32x32.png", "usr/share/icons/hicolor/32x32/apps/thaler-ai.png", "644"],
]

[package.metadata.wix]
upgrade-guid = "B36177BE-EA4D-44FB-B05C-EDDABDAA95CA"
path-guid = "BFD25009-65A4-4D1E-97F1-0030465D90D6"
product-icon = "icons/icon.ico"
license = false
